// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Banner Image renders correctly 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--m ecl-banner--font-m ecl-banner--box-bg-light ecl-banner--color-dark ecl-banner--h-left ecl-banner--v-center"
    data-ecl-auto-init="Banner"
    data-ecl-banner=""
  >
    <figure
      class="ecl-banner__picture-container"
    >
      <picture
        class="ecl-picture ecl-banner__picture"
        data-ecl-banner-image=""
      >
        <img
          alt="alternative text"
          class="ecl-banner__image"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
        />
      </picture>
      <footer
        class="ecl-banner__credit"
        data-ecl-banner-footer=""
      >
        <div
          class="ecl-container"
        >
          © Copyright
        </div>
      </footer>
    </figure>
    <div
      class="ecl-container ecl-banner__info"
    >
      <div
        class="ecl-banner__container"
        data-ecl-banner-container=""
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-banner__title-link"
                href="/example"
              >
                Lorem ipsum
              </a>
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-banner__description-link"
                href="/example"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
              </a>
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              class="ecl-link ecl-link--primary-highlight ecl-link--icon ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--corner-arrow ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon ecl-icon--corner-arrow"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Banner Image renders correctly with extra attributes 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--m ecl-banner--font-m ecl-banner--box-bg-light ecl-banner--color-dark ecl-banner--h-left ecl-banner--v-center"
    data-ecl-auto-init="Banner"
    data-ecl-banner=""
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <figure
      class="ecl-banner__picture-container"
    >
      <picture
        class="ecl-picture ecl-banner__picture"
        data-ecl-banner-image=""
      >
        <img
          alt="alternative text"
          class="ecl-banner__image"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
        />
      </picture>
      <footer
        class="ecl-banner__credit"
        data-ecl-banner-footer=""
      >
        <div
          class="ecl-container"
        >
          © Copyright
        </div>
      </footer>
    </figure>
    <div
      class="ecl-container ecl-banner__info"
    >
      <div
        class="ecl-banner__container"
        data-ecl-banner-container=""
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-banner__title-link"
                href="/example"
              >
                Lorem ipsum
              </a>
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-banner__description-link"
                href="/example"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
              </a>
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              class="ecl-link ecl-link--primary-highlight ecl-link--icon ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--corner-arrow ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon ecl-icon--corner-arrow"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Banner Image renders correctly with extra class names 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--m ecl-banner--font-m ecl-banner--box-bg-light ecl-banner--color-dark ecl-banner--h-left ecl-banner--v-center custom-class custom-class--test"
    data-ecl-auto-init="Banner"
    data-ecl-banner=""
  >
    <figure
      class="ecl-banner__picture-container"
    >
      <picture
        class="ecl-picture ecl-banner__picture"
        data-ecl-banner-image=""
      >
        <img
          alt="alternative text"
          class="ecl-banner__image"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
        />
      </picture>
      <footer
        class="ecl-banner__credit"
        data-ecl-banner-footer=""
      >
        <div
          class="ecl-container"
        >
          © Copyright
        </div>
      </footer>
    </figure>
    <div
      class="ecl-container ecl-banner__info"
    >
      <div
        class="ecl-banner__container"
        data-ecl-banner-container=""
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-banner__title-link"
                href="/example"
              >
                Lorem ipsum
              </a>
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-banner__description-link"
                href="/example"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
              </a>
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              class="ecl-link ecl-link--primary-highlight ecl-link--icon ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--corner-arrow ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon ecl-icon--corner-arrow"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Banner Image renders correctly with extra classes for the description link 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--m ecl-banner--font-m ecl-banner--box-bg-light ecl-banner--color-dark ecl-banner--h-left ecl-banner--v-center"
    data-ecl-auto-init="Banner"
    data-ecl-banner=""
  >
    <figure
      class="ecl-banner__picture-container"
    >
      <picture
        class="ecl-picture ecl-banner__picture"
        data-ecl-banner-image=""
      >
        <img
          alt="alternative text"
          class="ecl-banner__image"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
        />
      </picture>
      <footer
        class="ecl-banner__credit"
        data-ecl-banner-footer=""
      >
        <div
          class="ecl-container"
        >
          © Copyright
        </div>
      </footer>
    </figure>
    <div
      class="ecl-container ecl-banner__info"
    >
      <div
        class="ecl-banner__container"
        data-ecl-banner-container=""
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-banner__title-link"
                href="/example"
              >
                Lorem ipsum
              </a>
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              <a
                class="ecl-link ecl-link--standalone custom-description-link-class ecl-banner__description-link"
                href="/example"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
              </a>
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              class="ecl-link ecl-link--primary-highlight ecl-link--icon ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--corner-arrow ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon ecl-icon--corner-arrow"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Banner Image renders correctly with extra classes for the title link 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--m ecl-banner--font-m ecl-banner--box-bg-light ecl-banner--color-dark ecl-banner--h-left ecl-banner--v-center"
    data-ecl-auto-init="Banner"
    data-ecl-banner=""
  >
    <figure
      class="ecl-banner__picture-container"
    >
      <picture
        class="ecl-picture ecl-banner__picture"
        data-ecl-banner-image=""
      >
        <img
          alt="alternative text"
          class="ecl-banner__image"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
        />
      </picture>
      <footer
        class="ecl-banner__credit"
        data-ecl-banner-footer=""
      >
        <div
          class="ecl-container"
        >
          © Copyright
        </div>
      </footer>
    </figure>
    <div
      class="ecl-container ecl-banner__info"
    >
      <div
        class="ecl-banner__container"
        data-ecl-banner-container=""
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              <a
                class="ecl-link ecl-link--standalone custom-title-link-class ecl-banner__title-link"
                href="/example"
              >
                Lorem ipsum
              </a>
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-banner__description-link"
                href="/example"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
              </a>
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              class="ecl-link ecl-link--primary-highlight ecl-link--icon ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--corner-arrow ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon ecl-icon--corner-arrow"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Banner Image renders correctly without title, description and link 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--m ecl-banner--font-m ecl-banner--box-bg-light ecl-banner--color-dark ecl-banner--h-left ecl-banner--v-center"
    data-ecl-auto-init="Banner"
    data-ecl-banner=""
  >
    <figure
      class="ecl-banner__picture-container"
    >
      <picture
        class="ecl-picture ecl-banner__picture"
        data-ecl-banner-image=""
      >
        <img
          alt="alternative text"
          class="ecl-banner__image"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
        />
      </picture>
      <footer
        class="ecl-banner__credit"
        data-ecl-banner-footer=""
      >
        <div
          class="ecl-container"
        >
          © Copyright
        </div>
      </footer>
    </figure>
  </section>
</jest>
`;

exports[`Banner Video renders correctly 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--m ecl-banner--font-m ecl-banner--box-bg-light ecl-banner--color-dark ecl-banner--h-left ecl-banner--v-center"
    data-ecl-auto-init="Banner"
    data-ecl-banner=""
  >
    <div
      class="ecl-banner__video-container"
    >
      <video
        autoplay=""
        class="ecl-video ecl-banner__video"
        data-ecl-banner-video=""
        loop=""
        muted=""
        playsinline=""
        poster="https://vod.prd.commavservices.eu/12/224712/THUMB_I224712EN1W_V_1.jpg"
      >
        <source
          src="https://vod.prd.commavservices.eu/12/224712/LR_I224712EN1W.mp4"
          type="video/mp4"
        />
      </video>
      <div
        class="ecl-banner__credit"
        data-ecl-banner-footer=""
      >
        <div
          class="ecl-container"
        >
          © Copyright
        </div>
      </div>
      <button
        class="ecl-button ecl-button--tertiary ecl-button--m ecl-button--neutral ecl-banner__play ecl-button--icon-only"
        data-ecl-banner-play=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Play video
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--play-outline ecl-icon ecl-icon--m ecl-button__icon ecl-icon--play-outline"
            data-ecl-icon=""
          />
        </span>
      </button>
      <button
        class="ecl-button ecl-button--tertiary ecl-button--m ecl-button--neutral ecl-banner__pause ecl-button--icon-only"
        data-ecl-banner-pause=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Pause video
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--pause-outline ecl-icon ecl-icon--m ecl-button__icon ecl-icon--pause-outline"
            data-ecl-icon=""
          />
        </span>
      </button>
    </div>
    <div
      class="ecl-container ecl-banner__info"
    >
      <div
        class="ecl-banner__container"
        data-ecl-banner-container=""
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-banner__title-link"
                href="/example"
              >
                Lorem ipsum
              </a>
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-banner__description-link"
                href="/example"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
              </a>
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              class="ecl-link ecl-link--primary-highlight ecl-link--icon ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--corner-arrow ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon ecl-icon--corner-arrow"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Banner Video renders correctly with extra attributes for the video 1`] = `
<jest>
  <section
    class="ecl-banner ecl-banner--m ecl-banner--font-m ecl-banner--box-bg-light ecl-banner--color-dark ecl-banner--h-left ecl-banner--v-center"
    data-ecl-auto-init="Banner"
    data-ecl-banner=""
  >
    <div
      class="ecl-banner__video-container"
    >
      <video
        autoplay=""
        class="ecl-video ecl-banner__video"
        data-ecl-banner-video=""
        data-test-extra-attribute=""
        loop=""
        muted=""
        playsinline=""
        poster="https://vod.prd.commavservices.eu/12/224712/THUMB_I224712EN1W_V_1.jpg"
      >
        <source
          src="https://vod.prd.commavservices.eu/12/224712/LR_I224712EN1W.mp4"
          type="video/mp4"
        />
      </video>
      <div
        class="ecl-banner__credit"
        data-ecl-banner-footer=""
      >
        <div
          class="ecl-container"
        >
          © Copyright
        </div>
      </div>
      <button
        class="ecl-button ecl-button--tertiary ecl-button--m ecl-button--neutral ecl-banner__play ecl-button--icon-only"
        data-ecl-banner-play=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Play video
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--play-outline ecl-icon ecl-icon--m ecl-button__icon ecl-icon--play-outline"
            data-ecl-icon=""
          />
        </span>
      </button>
      <button
        class="ecl-button ecl-button--tertiary ecl-button--m ecl-button--neutral ecl-banner__pause ecl-button--icon-only"
        data-ecl-banner-pause=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Pause video
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--pause-outline ecl-icon ecl-icon--m ecl-button__icon ecl-icon--pause-outline"
            data-ecl-icon=""
          />
        </span>
      </button>
    </div>
    <div
      class="ecl-container ecl-banner__info"
    >
      <div
        class="ecl-banner__container"
        data-ecl-banner-container=""
      >
        <div
          class="ecl-banner__content"
        >
          <div
            class="ecl-banner__title"
          >
            <span
              class="ecl-banner__title-text"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-banner__title-link"
                href="/example"
              >
                Lorem ipsum
              </a>
            </span>
          </div>
          <p
            class="ecl-banner__description"
          >
            <span
              class="ecl-banner__description-text"
            >
              <a
                class="ecl-link ecl-link--standalone ecl-banner__description-link"
                href="/example"
              >
                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
              </a>
            </span>
          </p>
          <div
            class="ecl-banner__cta"
          >
            <a
              class="ecl-link ecl-link--primary-highlight ecl-link--icon ecl-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                CTA link
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--corner-arrow ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon ecl-icon--corner-arrow"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;
